# rilot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
examples/: Cargo.toml  Dockerfile  interface.wit  user-dockerfile
examples/config/: config.json
examples/src/: bindings.rs  lib.rs
src/: config.rs  error.rs  logger.rs  main.rs  proxy.rs  wasm_engine.rs
