[package]
name = "rilot"
version = "0.1.0"
edition = "2021"
authors = ["Maninderpreet Singh <maninderpreetchanna@gmail.com>"]
description = "Rilot - A Rust-based high-performance reverse proxy with dynamic WebAssembly overrides."
license = "MIT"
repository = "https://github.com/maninderpreetsingh/rilot"


[dependencies]
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.21.3"
anyhow               = "1.0"
tokio                = { version = "1", features = ["macros"] }
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
wasmtime           = { version = "32.0.0", features = ["component-model"] }
wasmtime-wasi      = "32.0.0"
wasmtime-wasi-io   = "32.0.0"
wasmtime-wasi-http = "32.0.0"
env_logger = "0.11"
log="0.4"