[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
wasi-http-client = "0.2.1"
wit-component = "0.229.0"
wit-bindgen = { version = "0.41.0", features = ["macros"] }
log = "0.4"

# Metadata needed by cargo-component
[package.metadata.component.target]
path = "interface.wit"
world = "rilot-override"